Using 'valueOf()' instead of 'new'